--- a/aise-hi/project1/index.html
+++ b/aise-hi/project1/index.html
@@ -6,17 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kuch bhi</title>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/csshake/1.5.3/csshake.min.css"
+        integrity="sha512-RliK2gk03WxUELn57ddjWLhEfhUiOZ85VvWLImFy8A7FOPMkF4Z9YGQ3VKX5jpwkEerAL6I0nC+JNeCPrxWBTw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    
+
 </head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="styles.css">
 
 <body>
-    <nav class="navbar">
-        <div class="logo">
-            <a href="#">Learners!</a>
-        </div>
+    <nav class="navbar flexbox part">
+
+
+        <a class="logo" href="#">Learners!</a>
+
 
         <div class="navbar-links">
-            <ul>
+            <ul class="flexbox">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Courses</a></li>
@@ -27,57 +38,61 @@
 
 
 
-    <section class="main">
-        <div class="main-text">
-            <h1 class="heading">Learn Awesome Skills!</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quidem reprehenderit laborum ducimus quas,
+    <section class="flexbox part main">
+        <div class="width-50 main-text">
+            <h1 class="heading shake-slow">Let's Learn Awesome Skills Together!</h1>
+            <p class="detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quidem reprehenderit laborum ducimus quas,
                 dignissimos in similique placeat perspiciatis non. Adipisci facere exercitationem fuga, voluptatem
                 voluptatibus cum similique minus quo.</p>
-            <button class="btn info-btn">Learn More</button>
-            <button class="btn action-btn">Buy Course</button>
+            <button class="btn infobtn">Learn More</button>
+            <button class="btn actionbtn">Buy Course</button>
         </div>
         <div class="main-img">
-            <img src="main.png" alt="main-img">
+            <img src="images/main.png" alt="main-img">
         </div>
     </section>
 
-    <hr>
+    <section class="part course-ka-section">
+        <h1 class="c-h1 heading">Explore Some Cool Courses!!</h1>
+        <section class="flexbox course-section">
+            <div class="course">
+                <div>
+                    <img src="images/course1.png" alt="course1">
+                </div>
+                <div>
+                    <h1>Learn HTML & CSS</h1>
+                    <p class="detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic officia deserunt natus doloribus
+                        molestias dignissimos voluptatem fuga excepturi modi qui.</p>
+                    <button class="btn">Start Learning!</button>
+                </div>
+            </div>
 
-    <section class="courses">
-        <h1 class="heading">Explore Some Cool Courses!!</h1>
-        <div class="course">
-            <div class="image">
-                <img src="course1.png" alt="">
+
+            <div class="course">
+                <div>
+                    <h1>Explore the world of JavaScript!</h1>
+                    <p class="detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic officia deserunt natus doloribus
+                        molestias dignissimos voluptatem fuga excepturi modi qui.</p>
+                    <button class="btn">Start Learning!</button>
+                </div>
+                <div class="js-img">
+                    <img src="images/course2.png" alt="course2">
+                </div>
             </div>
-            <div class="text">
-                <h1>Learn HTML & CSS</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic officia deserunt natus doloribus
-                    molestias dignissimos voluptatem fuga excepturi modi qui.</p>
-                <button class="btn">Start Learning!</button>
+
+
+            <div class="course">
+                <div>
+                    <img src="images/course3.png" alt="course3">
+                </div>
+                <div>
+                    <h1>Get into React..</h1>
+                    <p class="detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic officia deserunt natus doloribus
+                        molestias dignissimos voluptatem fuga excepturi modi qui.</p>
+                    <button class="btn">Start Learning!</button>
+                </div>
             </div>
-        </div>
-        <div class="course">
-            <div class="text">
-                <h1>Explore the world of JavaScript!</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic officia deserunt natus doloribus
-                    molestias dignissimos voluptatem fuga excepturi modi qui.</p>
-                <button class="btn">Start Learning!</button>
-            </div>
-            <div class="image right-main">
-                <img src="course2.png" alt="">
-            </div>
-        </div>
-        <div class="course">
-            <div class="image">
-                <img src="course3.png" alt="">
-            </div>
-            <div class="text">
-                <h1>Get into React..</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic officia deserunt natus doloribus
-                    molestias dignissimos voluptatem fuga excepturi modi qui.</p>
-                <button class="btn">Start Learning!</button>
-            </div>
-        </div>
+        </section>
     </section>
 </body>
 
