--- a/aise-hi/project1/index.html
+++ b/aise-hi/project1/index.html
@@ -148,7 +148,7 @@
     </section>
 
     <div class="last part">
-        <h1>😎😎</h1>
+        <h1 class="heading">Feedbacks..</h1>
 
         <section class="feedbacks">
             <div class="feedback1 feedback">
