huddle landing page

--- a/frontend-mentor/huddle-landing-page-with-single-introductory-section-master/index.html
+++ b/frontend-mentor/huddle-landing-page-with-single-introductory-section-master/index.html
@@ -1,33 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Huddle landing page with single introductory section completed</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;600&display=swap"
+    rel="stylesheet">
+
 </head>
+<link rel="stylesheet" href="style.css">
+
 <body>
 
-  Build The Community Your Fans Will Love
+  <div class="poora">
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+    <div class="main">
+      <div class="logo">
+        <img src="images/logo.svg" alt="logo">
+      </div>
 
-  Register
+      <div class="hero">
 
-  <footer>
+        <div class="hero-img">
+          <img src="images/illustration-mockups.svg" alt="hero-img">
+        </div>
+
+        <div class="hero-text">
+          <h1>Build The Community Your Fans Will Love</h1>
+          <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+            Create connections with your users as you engage in genuine discussion.</p>
+          <button>Register</button>
+        </div>
+      </div>
+
+      <div class="connect">
+        <div class="icon1"><i class="fa fa-facebook " aria-hidden="true"></i></div>
+        <div class="icon2"><i class="fa fa-twitter " aria-hidden="true"></i></div>
+        <div class="icon3"><i class="fa fa-instagram " aria-hidden="true"></i></div>
+      </div>
+    </div>
+
+
+  </div>
+
+  <!-- <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
     </p>
-  </footer>
+  </footer> -->
 </body>
+
 </html>
