--- a/css-concepts/animations/ex1/index.html
+++ b/css-concepts/animations/ex1/index.html
@@ -4,16 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>css units</title>
+    <title>Document</title>
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
-    <div class="container">
-        container
-        <div class="parent">
-            parent
-            <div class="child">child</div>
-        </div>
-    </div>
+    <div class="box"></div>
 </body>
 </html>
