operators and conditionals

--- a/javascript/basics/index.html
+++ b/javascript/basics/index.html
@@ -15,6 +15,9 @@
     <!-- <script src="dataTypes.js"></script> -->
     <!-- <script src="typeConversion.js"></script> -->
     <!-- <script src="basicOperators.js"></script> -->
-    <script src="alert-prompt-confirm.js"></script>
+    <!-- <script src="alert-prompt-confirm.js"></script> -->
+    <!-- <script src="comparisions.js"></script> -->
+    <!-- <script src="if-else.js"></script> -->
+    <script src="logical-operators.js"></script>
 </body>
 </html>
