loops and switch

--- a/javascript/basics/index.html
+++ b/javascript/basics/index.html
@@ -18,6 +18,8 @@
     <!-- <script src="alert-prompt-confirm.js"></script> -->
     <!-- <script src="comparisions.js"></script> -->
     <!-- <script src="if-else.js"></script> -->
-    <script src="logical-operators.js"></script>
+    <!-- <script src="logical-operators.js"></script> -->
+    <!-- <script src="loops.js"></script> -->
+    <script src="switch.js"></script>
 </body>
 </html>
