function expression and arrow functions

--- a/javascript/basics/functions/index.html
+++ b/javascript/basics/functions/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <!-- <script src="basics.js"></script> -->
-    <script src="FunctionExpression.js"></script>
+    <!-- <script src="FunctionExpression.js"></script> -->
+    <script src="arrowFunction.js"></script>
 </body>
 </html>
