--- a/javascript/basics/objects/index.html
+++ b/javascript/basics/objects/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="basics.js"></script>
+    <!-- <script src="basics.js"></script> -->
+    <script src="RefrencesCopying.js"></script>
 </body>
 </html>
