--- a/javascript/basics/objects/index.html
+++ b/javascript/basics/objects/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <!-- <script src="basics.js"></script> -->
-    <script src="RefrencesCopying.js"></script>
+    <!-- <script src="RefrencesCopying.js"></script> -->
+    <script src="this.js"></script>
 </body>
 </html>
