--- a/javascript/basics/objects/index.html
+++ b/javascript/basics/objects/index.html
@@ -9,6 +9,7 @@
 <body>
     <!-- <script src="basics.js"></script> -->
     <!-- <script src="RefrencesCopying.js"></script> -->
-    <script src="this.js"></script>
+    <!-- <script src="this.js"></script> -->
+    <script src="constructor.js"></script>
 </body>
 </html>
