optional chaining or  arr ka slice splice wgerah

--- a/javascript/basics/objects/index.html
+++ b/javascript/basics/objects/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="basics.js"></script> -->
     <!-- <script src="RefrencesCopying.js"></script> -->
     <!-- <script src="this.js"></script> -->
-    <script src="constructor.js"></script>
+    <!-- <script src="constructor.js"></script> -->
+    <script src="optionalChaining.js"></script>
 </body>
 </html>
