--- a/javascript/practice-of-part1-video/objects/index.html
+++ b/javascript/practice-of-part1-video/objects/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>arrays</title>
+    <title>objects</title>
 </head>
 <body>
-    <!-- <script src="basics.js"></script> -->
-    <!-- <script src="looping.js"></script> -->
-    <script src="destructuring.js"></script>
+    <!-- <script src="destructuring.js"></script> -->
+    <!-- <script src="nestsedDestructuring.js"></script> -->
+    <script src="spreadOperator.js"></script>
 </body>
 </html>
