map filter reduce

--- a/javascript/practice-of-part1-video/arrays/index.html
+++ b/javascript/practice-of-part1-video/arrays/index.html
@@ -9,6 +9,7 @@
 <body>
     <!-- <script src="basics.js"></script> -->
     <!-- <script src="looping.js"></script> -->
-    <script src="destructuring.js"></script>
+    <!-- <script src="destructuring.js"></script> -->
+    <script src="map-filter-reduce.js"></script>
 </body>
 </html>
