--- a/javascript/practice-of-part1-video/arrays/index.html
+++ b/javascript/practice-of-part1-video/arrays/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="basics.js"></script> -->
     <!-- <script src="looping.js"></script> -->
     <!-- <script src="destructuring.js"></script> -->
-    <script src="map-filter-reduce.js"></script>
+    <!-- <script src="map-filter-reduce.js"></script> -->
+    <script src="methods.js"></script>
 </body>
 </html>
