maps sets, call apply bind, __proro__ prototype

--- a/javascript/practice-of-part1-video/objects/index.html
+++ b/javascript/practice-of-part1-video/objects/index.html
@@ -9,6 +9,7 @@
 <body>
     <!-- <script src="destructuring.js"></script> -->
     <!-- <script src="nestsedDestructuring.js"></script> -->
-    <script src="spreadOperator.js"></script>
+    <!-- <script src="spreadOperator.js"></script> -->
+    <script src="call-apply-bind.js"></script>
 </body>
 </html>
