prop flags and getter setters in object

--- a/javascript/practice-of-part1-video/objects/index.html
+++ b/javascript/practice-of-part1-video/objects/index.html
@@ -10,6 +10,8 @@
     <!-- <script src="destructuring.js"></script> -->
     <!-- <script src="nestsedDestructuring.js"></script> -->
     <!-- <script src="spreadOperator.js"></script> -->
-    <script src="call-apply-bind.js"></script>
+    <!-- <script src="call-apply-bind.js"></script> -->
+    <!-- <script src="propFlag.js"></script> -->
+    <script src="gettersSetters.js"></script>
 </body>
 </html>
