--- a/javascript/practice-of-part1-video/class/index.html
+++ b/javascript/practice-of-part1-video/class/index.html
@@ -7,6 +7,7 @@
     <title>classes</title>
 </head>
 <body>
-    <script src="class.js"></script>
+    <!-- <script src="class.js"></script> -->
+    <script src="getterSetter.js"></script>
 </body>
 </html>
