--- a/js-projects/intermediate-projects/tic-tac-toe/index.html
+++ b/js-projects/intermediate-projects/tic-tac-toe/index.html
@@ -26,10 +26,12 @@
     <div class="pop-up">
 
         <div class="pop-up-main">
-            <p>"How are you playing?</p>
+            <div class="text">
+                
+            </div>
+
             <div class="buttons">
-                <button class="btn alone">Alone</button>
-                <button class="btn with-friend">With friend</button>
+                
             </div>
         </div>
 
