--- a/js-projects/advance-projects/meals/index.html
+++ b/js-projects/advance-projects/meals/index.html
@@ -21,26 +21,41 @@
         </div>
 
         <div class="selections">
-            <p class="middle">categories <i class="fa fa-angle-down"></i></p>
-            <p class="middle">area <i class="fa fa-angle-down"></i></p>
-            <p class="middle">ingredients <i class="fa fa-angle-down"></i></p>
+            <div class="main">
+                <p class="c expandNavLinkDetails  middle">categories <i class="c fa fa-angle-down"></i></p>
+                <p class="a expandNavLinkDetails middle">area <i class="a fa fa-angle-down"></i></p>
+                <p class="i expandNavLinkDetails middle">ingredients <i class="i fa fa-angle-down"></i></p>
+                <p class="bookmarks middle">Bookmarks <i class="fa fa-bookmark"></i></p>
+            </div>
+        </div>
+
+        <div class="expandNavBtn">
+            <span class="expandNavBtn-span"></span>
+            <span class="expandNavBtn-span"></span>
         </div>
     </nav>
 
     <main>
         <div class="meals">
             <!-- <div class="meal">
-                
+
+                <!-- <div class="image middle">
+                    <img src="https://www.themealdb.com/images/media/meals/sqrtwu1511721265.jpg" alt="meal-image">
+                </div>
+
                 <div class="text">
                     <div class="main">
                         <p class="name">Full English Breakfast</p>
                         <button class="save"><i class="fa fa-bookmark-o"></i></button>
                     </div>
                     <p class="instructions">Heat the flat grill plate over a low heat, on top of 2 rings/flames...</p>
-                    <button class="showDetails">Let's make this</button>
-                </div> -->
-            </div>
+                </div>
+                <button class="showDetails">Let's make this</button>
+            </div> -->
         </div>
+
+        <div class="bookmarkedMeals"></div>
+
     </main>
 
     <div class="pop-up middle">
