did some changes in ichu bday

--- a/js-projects/intermediate-projects/ichu-bday/index.html
+++ b/js-projects/intermediate-projects/ichu-bday/index.html
@@ -18,7 +18,7 @@
     <main>
         <button class="hack">Let's Hack</button>
         <div class="login">
-            <p>Login</p>
+            <p>Admin Panel</p>
     
             <form>
                 <input type="text" placeholder="username" autofocus>
