--- a/js-projects/advance-projects/meals/index.html
+++ b/js-projects/advance-projects/meals/index.html
@@ -22,9 +22,9 @@
 
         <div class="selections">
             <div class="main">
-                <p class="c Category expandNavLinkDetails  middle">categories <i class="c Category fa fa-angle-down"></i></p>
-                <p class="a Area expandNavLinkDetails middle">area <i class="a Area fa fa-angle-down"></i></p>
-                <p class="i Ingredient expandNavLinkDetails middle">ingredients <i class="i Ingredients fa fa-angle-down"></i></p>
+                <p class="c Category expandNavLinkDetails  middle">Category <i class="c Category fa fa-angle-down"></i></p>
+                <p class="a Area expandNavLinkDetails middle">Nationality <i class="a Area fa fa-angle-down"></i></p>
+                <p class="i Ingredient expandNavLinkDetails middle">Ingredient <i class="i Ingredients fa fa-angle-down"></i></p>
                 <p class="bookmarks middle">Bookmarks <i class="fa fa-bookmark"></i></p>
             </div>
         </div>
