navbar part done in both small and big screens

--- a/js-projects/advance-projects/meals/index.html
+++ b/js-projects/advance-projects/meals/index.html
@@ -24,7 +24,7 @@
             <div class="main">
                 <p class="c Category expandNavLinkDetails  middle">Category <i class="c Category fa fa-angle-down"></i></p>
                 <p class="a Area expandNavLinkDetails middle">Nationality <i class="a Area fa fa-angle-down"></i></p>
-                <p class="i Ingredient expandNavLinkDetails middle">Ingredient <i class="i Ingredients fa fa-angle-down"></i></p>
+                <p class="i Ingredient expandNavLinkDetails middle">Ingredient <i class="i Ingredient fa fa-angle-down"></i></p>
                 <p class="bookmarks middle">Bookmarks <i class="fa fa-bookmark"></i></p>
             </div>
         </div>
