--- a/js-projects/advance-projects/meals/index.html
+++ b/js-projects/advance-projects/meals/index.html
@@ -36,6 +36,72 @@
     </nav>
 
     <main>
+        <div class="template">
+            <div class="card">
+                <div class="image"></div>
+                <div class="text">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <div class="text">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <div class="text">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <div class="text">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <div class="text">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <div class="text">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <div class="text">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <div class="text">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <div class="text">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+        </div>
+
         <div class="meals">
             <!-- <div class="meal">
 
