home page almost done!

--- a/js-projects/advance-projects/moviess/index.html
+++ b/js-projects/advance-projects/moviess/index.html
@@ -56,6 +56,26 @@
     <!-- <form>
         <input type="search" placeholder="search a movie ot tv..">
     </form> -->
+
+    <main>
+        <section class="movies">
+            <h2>Movies</h2>
+
+            <div class="movies-card cards">
+            </div>
+
+        </section>
+
+        <section class="tvs">
+            <h2>Tvs</h2>
+
+            <div class="tvs-card cards">
+            </div>
+
+        </section>
+    </main>
+
+
     <footer>
         made with fun by me!
     </footer>
