--- a/js-projects/advance-projects/moviess/index.html
+++ b/js-projects/advance-projects/moviess/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./styles/main.css">
 
     <!-- scripts ------------------------------------------ -->
-<script src="./scripts/controller.js" defer type="module"></script>
+<!-- <script src="./scripts/controller.js" defer type="module"></script> -->
 
 </head>
 <body>
@@ -91,6 +91,92 @@
             <h1 class="page-title"> <span class="page-title-text"></span> </h1>
             <div class="cards"></div>
             
+        </div>
+
+        <div class="expand-card">
+            <button class="btn back"><i class="fa fa-long-arrow-left"></i> Back</button>
+
+            <div class="expand-card-main ">
+                <div class="main-content">
+                    <div class="name">Black adam Lorem ipsum dolor sit.</div>
+                    <button class="btn watch-trailer"><i class="fa fa-play"></i>watch trailer</button>
+                </div>
+
+                <div class="video">
+                    <iframe src="https://www.youtube.com/embed/b1pMQasDnhM" frame-border="0" width="100%" height="100%"></iframe>
+                    <button class="btn cross">x</button>
+                </div>
+
+            </div>
+
+            <div class="genres">
+                <span>Action</span>
+                <span>Fantasy</span>
+                <span>Science Fiction</span>
+            </div>
+
+            <div class="info">
+                <p>Status : <span>Released</span></p>
+                <p>Duration : <span>125min</span></p>
+                <p><a href="">learn more <i class="fa fa-external-link"></i></a></p>
+            </div>
+
+            <div class="intro">
+                <div class="tag-line">The world needed a hero. It got Black Adam.</div>
+                <div class="overview">Nearly 5,000 years after he was bestowed with the almighty powers of the Egyptian gods—and imprisoned just as quickly—Black Adam is freed from his earthly tomb, ready to unleash his unique form of justice on the modern world.</div>
+            </div>
+
+            <div class="casts cards">
+                <div class="card">
+                    <img src="https://image.tmdb.org/t/p/w200/cgoy7t5Ve075naBPcewZrc08qGw.jpg" alt="img">
+                    <div class="overlay flexbox">
+                        <p>Dwayne Johnson</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="https://image.tmdb.org/t/p/w200/cgoy7t5Ve075naBPcewZrc08qGw.jpg" alt="img">
+                    <div class="overlay flexbox">
+                        <p>Dwayne Johnson</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="https://image.tmdb.org/t/p/w200/cgoy7t5Ve075naBPcewZrc08qGw.jpg" alt="img">
+                    <div class="overlay flexbox">
+                        <p>Dwayne Johnson</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="https://image.tmdb.org/t/p/w200/cgoy7t5Ve075naBPcewZrc08qGw.jpg" alt="img">
+                    <div class="overlay flexbox">
+                        <p>Dwayne Johnson</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="https://image.tmdb.org/t/p/w200/cgoy7t5Ve075naBPcewZrc08qGw.jpg" alt="img">
+                    <div class="overlay flexbox">
+                        <p>Dwayne Johnson</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="https://image.tmdb.org/t/p/w200/cgoy7t5Ve075naBPcewZrc08qGw.jpg" alt="img">
+                    <div class="overlay flexbox">
+                        <p>Dwayne Johnson</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="https://image.tmdb.org/t/p/w200/cgoy7t5Ve075naBPcewZrc08qGw.jpg" alt="img">
+                    <div class="overlay flexbox">
+                        <p>Dwayne Johnson</p>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
 
