expand card and back is done (not data in that)

--- a/js-projects/advance-projects/moviess/index.html
+++ b/js-projects/advance-projects/moviess/index.html
@@ -15,14 +15,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,900&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik+Distressed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Distressed&display=swap" rel="stylesheet">
 
 
     <!-- styles ---------------------------- -->
     <link rel="stylesheet" href="./styles/main.css">
 
     <!-- scripts ------------------------------------------ -->
-<!-- <script src="./scripts/controller.js" defer type="module"></script> -->
+    <script src="./scripts/controller.js" defer type="module"></script>
 
 </head>
 <body>
@@ -88,12 +88,12 @@
 
         <div class="other-pages page-content">
 
-            <h1 class="page-title"> <span class="page-title-text"></span> </h1>
+            <h1 class="page-title"><span class="page-title-text"></span></h1>
             <div class="cards"></div>
             
         </div>
 
-        <div class="expand-card">
+        <div class="expand-card page-content">
             <button class="btn back"><i class="fa fa-long-arrow-left"></i> Back</button>
 
             <div class="expand-card-main ">
