expand card almost done just some errors..

--- a/js-projects/advance-projects/moviess/index.html
+++ b/js-projects/advance-projects/moviess/index.html
@@ -110,71 +110,31 @@
             </div>
 
             <div class="genres">
-                <span>Action</span>
+                <!-- <span>Action</span>
                 <span>Fantasy</span>
-                <span>Science Fiction</span>
+                <span>Science Fiction</span> -->
             </div>
 
-            <div class="info">
-                <p>Status : <span>Released</span></p>
-                <p>Duration : <span>125min</span></p>
-                <p><a href="">learn more <i class="fa fa-external-link"></i></a></p>
-            </div>
-
-            <div class="intro">
-                <div class="tag-line">The world needed a hero. It got Black Adam.</div>
-                <div class="overview">Nearly 5,000 years after he was bestowed with the almighty powers of the Egyptian gods—and imprisoned just as quickly—Black Adam is freed from his earthly tomb, ready to unleash his unique form of justice on the modern world.</div>
+            <div class="info-intro">
+                <div class="info">
+                    <!-- <p>Status : <span>Released</span></p>
+                    <p>Duration : <span>125min</span></p>
+                    <p><a href="">learn more <i class="fa fa-external-link"></i></a></p> -->
+                </div>
+    
+                <div class="intro">
+                    <!-- <div class="tag-line">The world needed a hero. It got Black Adam.</div>
+                    <div class="overview">Nearly 5,000 years after he was bestowed with the almighty powers of the Egyptian gods—and imprisoned just as quickly—Black Adam is freed from his earthly tomb, ready to unleash his unique form of justice on the modern world.</div> -->
+                </div>
             </div>
 
             <div class="casts cards">
-                <div class="card">
+                <!-- <div class="card">
                     <img src="https://image.tmdb.org/t/p/w200/cgoy7t5Ve075naBPcewZrc08qGw.jpg" alt="img">
                     <div class="overlay flexbox">
                         <p>Dwayne Johnson</p>
                     </div>
-                </div>
-
-                <div class="card">
-                    <img src="https://image.tmdb.org/t/p/w200/cgoy7t5Ve075naBPcewZrc08qGw.jpg" alt="img">
-                    <div class="overlay flexbox">
-                        <p>Dwayne Johnson</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <img src="https://image.tmdb.org/t/p/w200/cgoy7t5Ve075naBPcewZrc08qGw.jpg" alt="img">
-                    <div class="overlay flexbox">
-                        <p>Dwayne Johnson</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <img src="https://image.tmdb.org/t/p/w200/cgoy7t5Ve075naBPcewZrc08qGw.jpg" alt="img">
-                    <div class="overlay flexbox">
-                        <p>Dwayne Johnson</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <img src="https://image.tmdb.org/t/p/w200/cgoy7t5Ve075naBPcewZrc08qGw.jpg" alt="img">
-                    <div class="overlay flexbox">
-                        <p>Dwayne Johnson</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <img src="https://image.tmdb.org/t/p/w200/cgoy7t5Ve075naBPcewZrc08qGw.jpg" alt="img">
-                    <div class="overlay flexbox">
-                        <p>Dwayne Johnson</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <img src="https://image.tmdb.org/t/p/w200/cgoy7t5Ve075naBPcewZrc08qGw.jpg" alt="img">
-                    <div class="overlay flexbox">
-                        <p>Dwayne Johnson</p>
-                    </div>
-                </div>
+                </div> -->
             </div>
 
         </div>
